--- a/src/locale/messages.uk.xlf
+++ b/src/locale/messages.uk.xlf
@@ -2,12 +2,20 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="7071470734400948493" datatype="html">
+        <source>Author</source>
+        <target>Автор</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/pages/article/article.component.html</context>
+          <context context-type="linenumber">21</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="homepage.headline" datatype="html">
-        <source>Home page</source>
-        <target>Домашня сторінка</target>
+        <source> Home page </source>
+        <target> Домашня сторінка </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.component.html</context>
-          <context context-type="linenumber">3,6</context>
+          <context context-type="linenumber">5,10</context>
         </context-group>
         <note priority="1" from="description">An introduction header for this sample</note>
         <note priority="1" from="meaning">site header</note>
@@ -15,3 +23,4 @@
     </body>
   </file>
 </xliff>
+
