--- a/src/locale/messages.ru.xlf
+++ b/src/locale/messages.ru.xlf
@@ -5,22 +5,17 @@
       <trans-unit id="7071470734400948493" datatype="html">
         <source>Author</source>
         <target>Автор</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/pages/article/article.component.html</context>
-          <context context-type="linenumber">21</context>
-        </context-group>
       </trans-unit>
       <trans-unit id="homepage.headline" datatype="html">
         <source> Home page </source>
         <target> Домашняя страница </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/pages/home/home.component.html</context>
-          <context context-type="linenumber">5,10</context>
-        </context-group>
         <note priority="1" from="description">An introduction header for this sample</note>
         <note priority="1" from="meaning">site header</note>
+      </trans-unit>
+      <trans-unit id="3973931101896534797" datatype="html">
+        <source>Date</source>
+        <target>Дата</target>
       </trans-unit>
     </body>
   </file>
 </xliff>
-
