Add public dir and robots.

--- a/src/locale/messages.ru.xlf
+++ b/src/locale/messages.ru.xlf
@@ -16,6 +16,10 @@
         <source>Date</source>
         <target>Дата</target>
       </trans-unit>
+      <trans-unit id="8890553633144307762" datatype="html">
+        <source>Back</source>
+        <target>Назад</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
