--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -16,6 +16,9 @@
       <trans-unit id="8890553633144307762" datatype="html">
         <source>Back</source>
       </trans-unit>
+      <trans-unit id="1506941739988289207" datatype="html">
+        <source>To top</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
