--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -19,6 +19,9 @@
       <trans-unit id="1506941739988289207" datatype="html">
         <source>To top</source>
       </trans-unit>
+      <trans-unit id="8965493437207343684" datatype="html">
+        <source>Table of content</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
